[gd_scene load_steps=5 format=3 uid="uid://cyymowrt1aom4"]

[ext_resource type="Script" path="res://scenes/zombi-runner/Scenes/character.gd" id="1_dkh1g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5gl3g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lb750"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t26jr"]
size = Vector2(20, 30)

[node name="Character" type="CharacterBody2D"]
position = Vector2(128, 128)
collision_layer = 2
script = ExtResource("1_dkh1g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5gl3g")

[node name="LadderChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderChecker"]
shape = SubResource("RectangleShape2D_lb750")

[node name="CharacterChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterChecker"]
shape = SubResource("RectangleShape2D_t26jr")

[connection signal="body_entered" from="LadderChecker" to="." method="_on_ladder_checker_body_entered"]
[connection signal="body_exited" from="LadderChecker" to="." method="_on_ladder_checker_body_exited"]
[connection signal="area_entered" from="CharacterChecker" to="." method="_on_character_checker_area_entered"]
